Bug 603880. Implement nsWindow::GetDefaultScale on Windows based on LOGPIXELSY, set by font DPI settings. r=jmathies

--HG--
extra : rebase_source : 9f557d71a0aff00cf51093983809d7bbda477294